# fidelity2pit38

./: .gitignore  README.md  Transaction history.csv  fidelity2pit38.py  glosariusz-danych.md  podstawa-podatkowa.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
data/: stock-sales-2025.txt  stock-sales.txt
data-sample/: Transaction history 2024.csv  Transaction history 2025.csv  stock-sales-2024.txt
output-sample/: pit38_report_2024.csv  pit38_report_2024.html  pit38_report_2025.csv  pit38_report_2025.html
scripts/: install-hooks.sh  pre-commit.sh  update_readme.py
src/fidelity2pit38/: __init__.py  cli.py  core.py  pit38_fields.py  report.py  validation.py
tests/: conftest.py  test_discover_files.py  test_dividends.py  test_e2e_scenarios.py  test_end_to_end.py  test_foreign_tax_components.py  test_load_nbp_rates.py  test_load_transactions.py  test_merge_with_rates.py  test_multi_year.py  test_pit38_fields.py  test_process_custom.py  test_process_fifo.py  test_rate_dates.py  test_settlement_dates.py
tests/fixtures/: nbp_rates_2023.csv  nbp_rates_2024.csv
