[project]
name = "fidelity2pit38"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "workalendar>=17.0.0",
]

[project.scripts]
fidelity2pit38 = "fidelity2pit38.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.0",
]
